force-app/main/default/objects/CcpOrdr__x/CcpOrdr__x.object-meta.xml
<CustomObject>
    <externalDataSource>TCP_Place_Order</externalDataSource>
    <externalName>CcpOrdrSet</externalName>
    <label>CcpOrdr</label>
    <pluralLabel>CcpOrdrSet</pluralLabel>
</CustomObject>