force-app/main/default/objects/CcpOrdr__x/fields/ItmNumber__c.field-meta.xml
<CustomField>
    <fullName>ItmNumber__c</fullName>
    <description>ItmNumber</description>
    <externalDeveloperName>ItmNumber</externalDeveloperName>
    <label>ItmNumber</label>
    <length>6</length>
    <type>Text</type>
</CustomField>