force-app/main/default/objects/CcpOrdr__x/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Material</description>
    <externalDeveloperName>Material</externalDeveloperName>
    <label>Material</label>
    <length>24</length>
    <type>Text</type>
</CustomField>