force-app/main/default/objects/CcpOrdr__x/fields/Msgid__c.field-meta.xml
<CustomField>
    <fullName>Msgid__c</fullName>
    <description>Msgid</description>
    <externalDeveloperName>Msgid</externalDeveloperName>
    <label>Msgid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>