force-app/main/default/objects/CcpOrdr__x/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>Payer</description>
    <externalDeveloperName>Payer</externalDeveloperName>
    <label>Payer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>