force-app/main/default/objects/CcpOrdr__x/fields/PurchNoC__c.field-meta.xml
<CustomField>
    <fullName>PurchNoC__c</fullName>
    <description>PurchNoC</description>
    <externalDeveloperName>PurchNoC</externalDeveloperName>
    <label>PurchNoC</label>
    <length>35</length>
    <type>Text</type>
</CustomField>