force-app/main/default/objects/CcpOrdr__x/fields/ReqDate__c.field-meta.xml
<CustomField>
    <fullName>ReqDate__c</fullName>
    <description>ReqDate</description>
    <externalDeveloperName>ReqDate</externalDeveloperName>
    <label>ReqDate</label>
    <length>14</length>
    <type>Text</type>
</CustomField>