force-app/main/default/objects/CcpOrdr__x/fields/ReqQty__c.field-meta.xml
<CustomField>
    <fullName>ReqQty__c</fullName>
    <description>ReqQty</description>
    <externalDeveloperName>ReqQty</externalDeveloperName>
    <label>ReqQty</label>
    <length>23</length>
    <type>Text</type>
</CustomField>