force-app/main/default/objects/CcpOrdr__x/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <description>SalesUnit</description>
    <externalDeveloperName>SalesUnit</externalDeveloperName>
    <label>SalesUnit</label>
    <length>9</length>
    <type>Text</type>
</CustomField>