force-app/main/default/objects/CcpOrdr__x/fields/ShipCond__c.field-meta.xml
<CustomField>
    <fullName>ShipCond__c</fullName>
    <description>ShipCond</description>
    <externalDeveloperName>ShipCond</externalDeveloperName>
    <label>ShipCond</label>
    <length>2</length>
    <type>Text</type>
</CustomField>