force-app/main/default/objects/CcpOrdr__x/fields/Shipto__c.field-meta.xml
<CustomField>
    <fullName>Shipto__c</fullName>
    <description>Shipto</description>
    <externalDeveloperName>Shipto</externalDeveloperName>
    <label>Shipto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>