force-app/main/default/objects/CcpOrdr__x/fields/Ttype__c.field-meta.xml
<CustomField>
    <fullName>Ttype__c</fullName>
    <description>Ttype</description>
    <externalDeveloperName>Ttype</externalDeveloperName>
    <label>Ttype</label>
    <length>10</length>
    <type>Text</type>
</CustomField>