force-app/main/default/objects/CcpOrdr__x/fields/WebOrder__c.field-meta.xml
<CustomField>
    <fullName>WebOrder__c</fullName>
    <description>WebOrder</description>
    <externalDeveloperName>WebOrder</externalDeveloperName>
    <label>WebOrder</label>
    <length>12</length>
    <type>Text</type>
</CustomField>